# ugv_autonomy_stack

./: .copyright_header_cpp.txt  .copyright_header_python.txt  .gitignore  .mailmap  COPYRIGHT.md  IP_PROTECTION.md  LICENSE  README.md
install/: local_setup.sh  setup.sh
install/rover_description/share/rover_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rover_simulation/share/rover_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: slam_toolbox.yaml
src/localization/launch/: slam.launch.py
src/navigation/: CMakeLists.txt  package.xml
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/urdf/: rover.urdf.xacro
src/rover_localization/: CMakeLists.txt  package.xml
src/rover_localization/config/: ekf.yaml
src/rover_localization/launch/: localization.launch.py
src/rover_mapping/: CMakeLists.txt  package.xml
src/rover_mapping/config/: mapper_params_online_async.yaml
src/rover_mapping/launch/: mapping.launch.py
src/rover_navigation/: CMakeLists.txt  package.xml
src/rover_navigation/config/: nav2_params.yaml
src/rover_navigation/launch/: navigation.launch.py
src/rover_simulation/: CMakeLists.txt  package.xml
src/rover_simulation/config/: autonomy.rviz  controllers.yaml
src/rover_simulation/launch/: full_autonomy.launch.py  sim.launch.py
src/sensor_drivers/: CMakeLists.txt  README.md  package.xml
src/sensor_fusion/: CMakeLists.txt  package.xml
src/sensor_fusion/config/: ekf.yaml
src/sensor_fusion/launch/: localization.launch.py
src/universal_autonomy_kit/diagnostics_manager/: package.xml  setup.cfg  setup.py
src/universal_autonomy_kit/diagnostics_manager/config/: analyzers.yaml
src/universal_autonomy_kit/diagnostics_manager/launch/: diagnostics.launch.py
src/universal_autonomy_kit/hardware_bridge/: package.xml  setup.py
src/universal_autonomy_kit/hardware_bridge/config/: mavlink-router.conf  mavros_params.yaml
src/universal_autonomy_kit/hardware_bridge/launch/: mavros_bridge.launch.py
src/universal_autonomy_kit/hardware_bridge/scripts/: run_router.sh
src/universal_autonomy_kit/navigation_server/: package.xml  setup.py
src/universal_autonomy_kit/navigation_server/config/: nav2_params.yaml
src/universal_autonomy_kit/rover_configurator/: package.xml  setup.cfg  setup.py
src/universal_autonomy_kit/sensor_interface/: package.xml  setup.py
src/universal_autonomy_kit/uikit_web_server/: package.xml  setup.cfg  setup.py
(+27 files in other folders)
